--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -18,7 +18,7 @@
 
 \begin{document}
 
-\centerline{\large \bf Given a helical compression spring in a spring-mass-damper system, what are optimal springs?}
+\centerline{\large \bf Given a Helical Compression Spring in a Spring-Mass-Damper System, What are Optimal Springs?}
 
 \vspace{.1truein}
 
@@ -49,15 +49,10 @@ Sean Webb\footnote{Sandia National Laboratory};
 \centerline{\bf Abstract}
 
 
-
-
-
 \section{Introduction}
 \label{sec:Introduction}
-%It should be written as much as possible in non-technical terms, so that a
-%lay reader can understand the context and the contribution of the paper.
 
-Springs have many everyday uses, such as in cars, homes, gyms, and industry. For example, springs are used in acceleration switches like the one seen in Figure~\ref{fig:Acceleration_Switch}. Their purpose in this instance is to close an electrical circuit once the object carrying the switch reaches a certain acceleration. This mechanism provides power to sensory equipment and data recorders for very precise amounts of time, and an application of its use is to collect data from rocket sled experiments. 
+Springs have many everyday uses, such as in cars, homes, gyms, and industry. For example, springs are used in acceleration switches like the one seen in Figure~\ref{fig:Acceleration_Switch}. Their purpose in this instance is to close an electrical circuit once the object carrying the switch reaches a certain acceleration. This mechanism provides power to sensory equipment and data recorders for very precise amounts of time, and an application of its use is to collect data from rocket sled experiments~\cite{Massad2015}. 
 
 		\begin{figure}[h]
 		 \begin{center}\includegraphics[scale=.2]{Acceleration_Switch.png}\end{center}
@@ -66,13 +61,13 @@ Springs have many everyday uses, such as in cars, homes, gyms, and industry. For
 		 
 		 \end{figure}	 
 		
-These rocket sled tests include very high velocities and accelerations and end in a destructive impact. Since the test is not easily replicated, we must have the ability to consistently and correctly collect data. This means we require that the spring in the acceleration switch must behave as expected to the forces exerted on it, and having a switch that is closed earlier or later than expected is undesirable~\cite{IMSM2010}. Designing a spring to behave as desired is a complicated problem that requires satisfying numerous constraints on the spring's physical properties. That the desired spring can vary depending on the application further complicates the problem. 
+These rocket sled tests include very high velocities and accelerations, and the experiments end with their destruction upon impact. Since the test is not easily replicated, we must have the ability to consistently and correctly collect data. This means we require that the spring in the acceleration switch must function as expected to the forces exerted on it, and having a switch that is closed earlier or later than expected is undesirable~\cite{IMSM2010}. Designing a spring to behave as desired is a complicated problem that requires satisfying numerous constraints on the spring's physical properties. That the desired spring can vary depending on the application further complicates the problem. 
 
-Spring design under these conditions amounts to a constrained optimization problem where certain properties of the spring may need to be maximized or minimized subject to bounds on some or all of the spring's other properties. Extending the scope of focus beyond springs' use in acceleration switches, which already cover a vast spread of specific spring designs, results in even more possibilities for design specifications. Rather than developing methods to solve these problems on an ad hoc basis, developing a tool to address a wide variety of constrained optimization problems for spring design would be beneficial. 
+Spring design under these conditions amounts to a constrained optimization problem where certain properties of the spring may need to be maximized or minimized subject to bounds on some or all of the spring's other properties. Extending the scope beyond spring design for use in acceleration switches, which already cover a vast spread of specific spring designs, results in even more possibilities for design specifications. Rather than developing methods to solve these problems on an ad hoc basis, we develop to solve a wide variety of spring design problems. 
 
 Designing an optimal spring is not a new problem. Brake et al. considered the design of an acceleration switch with enabled uncertainty~\cite{IMSM2010}. Alternatively, Sastry et al. implemented probabilistic response surface methodology to investigate the complications of uncertainty in designing a spring~\cite{Reliability}. Others have considered the reduction of the optimization problem to focus on a single parameter~\cite{Robust}. Similar tools to the ones mentioned above also exist~\cite{Paredes}.
 
-Motivated by a workflow premise, we produce a novel tool with new capabilities. The novelties we include are the inherit flexibility in our tool's framework, tools to visualize the existence of solutions for constrained optimization problems, sensitivity analysis capabilities, and design optimization under uncertainty. We also discuss the inclusion of stress relaxation constraints in the spring design, which to our knowledge has not been considered before. We provide details regarding these items as follows. Section~\ref{sec:The_Problem} formally defines the spring design problem for helical compression springs. Section~\ref{sec:The_Approach} outlines the workflow. Section~\ref{sec:Computational_Experiments} shares cases studies using our approach, and Section~\ref{sec:Summary} summarizes our work and provides suggestions for future work.
+Motivated by a workflow premise, we produce a novel tool with new capabilities. The novelties we include are the inherent flexibility in our tool's framework, tools to visualize the existence of solutions for constrained optimization problems, sensitivity analysis capabilities, and design optimization under uncertainty. We also discuss the inclusion of stress relaxation constraints in the spring design, which to our knowledge has not been considered before. We provide details regarding these items as follows. Section~\ref{sec:The_Problem} formally defines the spring design problem for helical compression springs. Section~\ref{sec:The_Approach} outlines the workflow for optimal spring design. Section~\ref{sec:Computational_Experiments} shares cases studies using our approach, and Section~\ref{sec:Summary} summarizes our work and provides suggestions for future work.
 
 			
 \section{The Problem} 
@@ -92,83 +87,82 @@ Helical compression springs, such as the one in Figure~\ref{fig:Spring}, are pos
 
 We can uniquely define a helical compression spring by a set of design parameters, which then determine physical attributes of the spring~\cite{Massad2015}. Figures~\ref{fig:Description1}~and~\ref{fig:Description2} provide visual representations for a few of the basic parameters, and a complete list of parameters and attributes follows. 		 
 		\begin{figure}[h]
-			\centering
 			\begin{subfigure}{.5\textwidth}
-				\includegraphics[scale=.2]{Spring_Description.png}
-				\caption{Pitch, outer diameter, and length of a spring.}
+				\centering
+				\includegraphics[scale=.17]{Spring_Description.png}
+				\caption{The pitch, outer diameter, and length of a spring.}
 				\label{fig:Description1}
 			\end{subfigure}%
 			\begin{subfigure}{.5\textwidth}
 				  \centering
-		 		\includegraphics[scale=.2]{Spring_Description2.png}
-				\caption{Inner diameter}
+		 		\includegraphics[scale=.15]{Spring_Description2.png}
+				\caption{The inner diameter of a spring.}
 				  \label{fig:Description2}
 		  		
 			\end{subfigure}
 			 \label{fig:Descriptions}
-		  \caption{A few figures that show some parameters for a helical compression spring.}
+		  \caption{A subset of basic parameters for a helical compression spring.}
 		\end{figure}
 		
-		\noindent \textbf{Spring Design Parameters:}
-		\begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries Young's Modulus}]
-			\item [Inner Diameter] Denoted $d_{i}$, this is the diameter of the circle formed by the spring's interior. See Figure~\ref{fig:Description2}.
+		\center\noindent\textbf{Spring Design Parameters}
+		\begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries Young's Modulus (E)}]
+			\item [Wire Diameter ($\boldsymbol{d}_{\text{w}}$)] This is the diameter of the circular wire used to form the spring.
+		
+			\item [Inner Diameter ($\boldsymbol{d}_{i}$)] This is the diameter of the circle formed by the spring's interior excluding the wire. See Figure~\ref{fig:Description2}.
 			
-			\item [Outer Diameter] Denoted $d_{\text{o}}$, this is the diameter of the circle formed by the spring including the wire. See Figure~\ref{fig:Description1}.
+			\item [Outer Diameter ($\boldsymbol{d}_{\text{o}}$)] This is the diameter of the circle formed by the spring including the wire, so ${d_{\text{o}} = d_{\text{i}} + 2d_{\text{w}}}$. See Figure~\ref{fig:Description1}.
 			
-			\item [Wire Diameter] Denoted $d_{\text{w}}$, this is the diameter of the circular wire used to form the spring.
+			\item[Total Coils ($\boldsymbol{N}_{\text{t}}$)] This is the total number of 360 degree rotations formed by the spring coil. The value does not have to be an integer. 
 			
-			\item[Total Coils] Denoted $N_{\text{t}}$, this is the total number of 360 degree rotations in the spring. We allow for partial rotations.
-			
-			\item[Active Coils] Denoted $N_{\text{a}}$, this is the number of coils that do not touch any other coils. The number of active coils depends on $N_{t}$ and the spring's end conditions. If the end condition is \textit{closed} the terminal coils of the spring are welded to their adjacent coils and $N_{a} = N_{t}-2$. If the end condition is \textit{open}, the terminal coils of the spring are free and $N_{a} = N_{t}-1$. Note this relationship creates a lower bound on the total number of coils.
+			\item[Active Coils ($\boldsymbol{N}_{\text{a}}$)] This is the number of coils that contribute to the force opposing any compression force on the spring. The number of active coils depends on $N_{t}$ and the spring's end conditions. If the end condition is \textit{closed} the terminal coils of the spring are welded to their adjacent coils and $N_{a} = N_{t}-2$. If the end condition is \textit{open}, the terminal coils of the spring are free and $N_{a} = N_{t}-1$. Note this relationship creates a lower bound on the total number of coils.
 
-			\item[Free Length] Denoted $L_{\text{free}}$, this is the spring's length without any force acting on it, i.e., the spring's natural length.
+			\item[Free Length ($\boldsymbol{L}_{\text{free}}$)] This is the spring's length without any force acting on it, i.e., the spring's natural length.
+						
+			\item[Open Length ($\boldsymbol{L}_{\text{open}}$)] This is the spring's resting length in its application. In the acceleration switch, for example, it is the length of the spring in the switch when the switch is not in use. 
+						
+			\item[Hard Length ($\boldsymbol{L}_{\text{hard}}$)] This is the minimum length a spring can compress to under a specified force. For the acceleration switch example, the spring cannot compression beyond a certain point under the applied forces because additional compression would reopen the circuit.
 			
-			\item[Solid Length] Denoted $L_{\text{solid}}$, this is the spring's length when its coils are completely compressed. The solid length depends on $N_{\text{t}}$ and $d_{\text{w}}$.
-			
-			\item[Open Length] Denoted $L_{\text{open}}$, this is the spring's resting length in its application. In the acceleration switch, for example, it is the length of the spring in the switch before the switch is used.
-			
-			\item[Hard Length] Denoted $L_{\text{hard}}$, this is the minimum length a spring can compress to under a specified force. For the acceleration switch example, the spring cannot compression beyond a certain point under the applied forces because additional compression would reopen the circuit. 
+			\item[Solid Length ($\boldsymbol{L}_{\text{solid}}$)] This is the spring's length when its coils are completely compressed. The solid length is $L_{\text{solid}} = N_{\text{t}}d_{\text{w}}$. Also, the lengths defined must satisfy ${L_{\text{solid}} \le L_{\text{hard}} < L_{\text{open}} \le L_{\text{free}}}$.
 					
-			\item[Pitch] Denoted $p$, this is the distance between coils. The pitch depends on $d_{\text{w}}$, $L_{\text{free}}$, $N_{\text{a}}$, and the spring's end conditions. See Figure~\ref{fig:Description1}.			
+			\item[Pitch ($\boldsymbol{p}$)] This is the distance between coils. For coils with \textit{closed} end conditions, ${p = \frac{L_{\text{free}}-2d_{\text{free}}}{N_{\text{a}}}}$, and for coils with \textit{open} end conditions, $p = \frac{L_{\text{free}}}{N_{\text{a}}-1}$. See Figure~\ref{fig:Description1}.			
 			
-			\item[Young's Modulus] Denoted $E$, this describes the spring's response to uniaxial stress and helps to define the spring's rigidity. Young's modulus is also know as the modulus of elasticity.
+			\item[Young's Modulus ($\boldsymbol{E}$)] This describes the spring's response to uniaxial stress and is one defining aspect of the spring's rigidity. Young's modulus is also know as the modulus of elasticity.
 			
-			\item[Poisson Ratio] Denoted $\nu$, this is a measurement of how much the spring deforms in two dimensions when it is compressed in the third.
+			\item[Poisson Ratio ($\boldsymbol{\nu}$)] This is a measurement of how much the spring deforms in any two dimensions when it is compressed in the third dimension.
 			
-			\item[Shear Modulus] Denoted $G$, this describes the spring's response to shear stress and helps to define the spring's rigidity. The shear modulus is also known as the modulus of rigidity and depends on $E$ and $\nu$. 
+			\item[Shear Modulus ($\boldsymbol{G}$)] This describes the spring's response to shear stress and is another defining aspect of the spring's rigidity. The shear modulus is also known as the modulus of rigidity and is $G = \frac{E}{2(1+\nu)}$. 
 		
 		\end{description}
 
 		\noindent\textbf{Spring Attributes:}
 			\begin{description}
 				\item [Spring Rate] \begin{equation} k = \frac{G}{8N_{\text{a}}}\frac{d_{\text{w}}^{4}}{(d_{\text{i}} + d_{\text{w}})^{3}}\end{equation}
-				The spring rate is a measurement of the rigidity or stiffness of the spring. 
+				The spring rate measures the rigidity or stiffness of the spring. 
 			
 			\item[Spring Index]\begin{equation}C = \frac{d_{\text{i}}}{d_{\text{w}}} + 1.\end{equation}
-				The spring index gives a measurement of the ratio between the spring's inner diameter and wire diameter and often has a direction relationship to the manufacturing cost for the spring~\cite{SpringIndex}.
+				The spring index measures the ratio between the spring's inner diameter and wire diameter and often is proportional to the manufacturing cost for the spring~\cite{SpringIndex}.
 			
-			\item[Preload Force]\begin{equation*} F_{\text{open}} = (L_{\text{free}}-L_{\text{hard}})\frac{G}{8N_{\text{a}}}\frac{d_{\text{w}}^{4}}{(d_{\text{i}} + d_{\text{w}})^{3}} \end{equation*}
-				Preload Force is the force applied to the spring while it is in the open position. For the acceleration switch example, this is the applied force on the spring when the switch is not in use.
+			\item[Preload Force]\begin{equation*} F_{\text{open}} = (L_{\text{free}}-L_{\text{open}})k = (L_{\text{free}}-L_{\text{open}})\frac{G}{8N_{\text{a}}}\frac{d_{\text{w}}^{4}}{(d_{\text{i}} + d_{\text{w}})^{3}} \end{equation*}
+				Preload Force is the force applied to the spring while it is in the open position. For the acceleration switch example, this is the force applied on the spring when the switch is not in use.  
 				
-			\item[Coil Binding Gap]\begin{equation} g = \frac{L_{\text{hard}} - L_{\text{solid}}(d_{\text{w}},N_{\text{a}})}{N_{\text{t}} - 1}\end{equation}		
+			\item[Coil Binding Gap]\begin{equation} g = \frac{L_{\text{hard}} - L_{\text{solid}}}{N_{\text{t}} - 1}\end{equation}		
 				Coil binding gap is the pitch of the spring when the spring is compressed to its hard length. 
 			 
 			 \item[Buckling Slenderness Ratio]\begin{equation*} \lambda = \frac{L_{\text{free}}}{d_{\text{i}} + d_{\text{w}}} \end{equation*}
-			 	The buckling slenderness ratio is a measurement of the spring's susceptibility to buckling as it is compressed.
+			 	The buckling slenderness ratio measures the spring's susceptibility to buckling under compression.
 			 
 			 \item[Shear Strength]\begin{equation} UTS = \frac{G(L_{\text{free}} - L_{\text{hard}})}{4 \pi N_{\text{a}}} \left[\frac{d_{\text{w}} (4d_{\text{i}}^{2} + 9.46d_{\text{i}} 
 d_{\text{w}} + 3 d_{\text{w}}^{2})}{d_{\text{i}}(d_{\text{i}}+d_{\text{w}})^{3}}\right]\end{equation}
-				Shear strength is a measurement of the spring's ability to withstand shear stress. 
+				Shear strength measures the spring's ability to withstand shear stress. 
 			
 			\item[Diametral Expansion]\begin{equation} d_{\text{expand}} = d_{\text{w}} + \sqrt{(d_{\text{i}} + d_{\text{w}})^{2} + \frac{p^{2} - d_{\text{w}}}{\pi^{2}}}
 			\end{equation}
-				The diametral expansion is the measurement of how much the diameter of the spring increases as the spring is compressed. Note that the discriminant of the square root is necessarily positive, so diametral expansion can put additional constraints on the relationship between some parameters. 	
+				The diametral expansion is the measurement of how much the outer diameter of the spring increases as the spring is compressed. Note that the discriminant of the square root is necessarily nonnegative, so diametral expansion can put additional constraints on the relationship between some parameters. 	
 			% Talk about open vs closed
 			
 			\end{description}
 
-This list of parameters and attributes is not exhaustive, but it does demonstrate the inherent complexities found in spring design. Requiring spring design that must satisfy both upper and lower bounds on each of the attributes is not uncommon. As a result formulating the exact problem statement as given by the required spring design must be precise and can benefit from a standard convention. This lends itself to a mathematical formulation.
-In addition to these we should be able to minimize any parameter of the spring. It may be possible they wish to minimize the wire diameter, or the length of the spring at a certain state.  
+This list of parameters and attributes is not exhaustive, but it does demonstrate the inherent complexities in spring design. Spring design that requires both upper and lower bounds on each of the attributes is not uncommon. As a result formulating the exact problem statement as given by the required spring design must be precise and can benefit from a standard convention. This lends itself to a mathematical formulation.
 
 \subsection{Constrained Optimization}
 \label{sec:Constrained_Optimization}
@@ -185,22 +179,10 @@ Given an input of objectives and constraints on those objectives which are both 
 				
 Here, $\mathbf{x}$ is the set of independent variables for the problem. In the context of spring design the independent variables are the spring parameters, which we also call design variables in the context of optimization. The function $F(\mathbf{x})$ is the objective function that we try to optimize. For spring design this function can consist of a single spring attribute or any weighted linear combination of attributes. Lastly, the function $\mathbf{G}(\mathbf{x})$ is the set of constraint functions restricting the optimization problem. For spring design, this set can consist of any combination of bounds on the design variables and bounds on the spring attributes.
 
-\begin{itemize}
-	\item \textbf{x} is a set of variables for optimization, they are user specified.
-	
-	\item F(\textbf{x}) is the objective function. It is comprised of any parameters or attributes described above. It can also include other user defined attributes and parameters not considered in this paper. The user specifies the objective function.  
-	
-	\item G(\textbf{x}) is the list of constraints. It is comprised of any parameters or attributes described above. It can also include other user defined attributes and parameters not considered in this paper. The user specifies the constraints to use.
-\end{itemize}
-
-% pull top stuff down into sections
-
 \section{The Approach}
 \label{sec:The_Approach}
 
-
-
-Our approach follow the workflow illustrated in Figure~\ref{Workflow}. This is an iterative process that receives a user specified problem, reformulates and solves the problem, and then returns a result for the user to accept or decline. The remainder of this section expands upon the details of each element in this diagram.
+Our approach follow the optimal spring design workflow illustrated in Figure~\ref{Workflow}. This is an iterative process that receives a user specified problem, reformulates and solves the problem, and then returns a result for the user to accept or decline. The remainder of this section expands upon the details of each element in this diagram.
 
 		\begin{figure}[h!]
 		 \begin{center}\includegraphics[scale=.4]{IMSM_Workflow.png}\end{center}
@@ -212,38 +194,28 @@ Our approach follow the workflow illustrated in Figure~\ref{Workflow}. This is a
 \subsection{User Input}
 \label{subsec:User_Input}
 
-The first step in our work flow is receiving spring design specifications from the user. In general, this includes an optimization objective, a list of design variables, and a set of constraints. The first task in our work flow is to maximize the user's ability to specify a problem while still being able to generate a meaningful solution. As a solution, we place some limits the user's input and designed a program capable of solving this restricted class of problems.
-
-To reduce the size of the permissible problem space, two restrictions are put on the user's input problem.  First, the user must specify the optimization function as a weighted sum of minimums and maximums.  While other methods for multicriteria optimization exist, implementing these into our scheme has been left to future work.  Second, based on discussions with engineers experienced with spring design, we restricted the space of free variables to those that are considered most important.
-
-Next, to allow our program to handle any problem formulated on this reduced problem space, our software uses an object oriented design.  Object-oriented programming is an approach to software design that centers around classes.  Classes are essentially data containers capable of performing a predefined set of tasks.  For example, our program uses a \textbf{Constraint} class that includes the constraint's function, and a way to check whether the constraint is violated at a given point.
-
-Using classes allow flexibility because the program's algorithm can be designed to operate on the classes.  For example, the \textbf{OptimizationProblem} class generates the input for the optimizer and sensitivity analysis.  Thus when the user inputs a new problem, the program generates an \textbf{OptimizationProblem} with a specific optimization function and set of constraints.  Thus, the final stage of the user input process is translating the set of optimization parameters into instances of the program's classes.
-
-Additional points to consider...adding new constraint functions and the predefined constraints list.
-
-To be as flexible as possible we must be able to handle constraints and objectives that have an unknown number of  variables a priori. To handle this uncertainty we instead of evaluating an objective or constraint with a set of values we evaluate with a "spring object" in the programming sense \cite{OOP}. This spring has all the attributes of interest and the function merely picks what values it needs for evaluation. 
-
-This approach is also implemented in the design of a constraint and objective. An objective is an expression that we must be able to evaluate. A constraint is an expression that we must evaluate and check if this evaluation violates the constraint condition. We use the idea of inheritance and let a constraint inherit the properties of being an objective with additional framework to compare to a condition. This allows the user to interchange constraints and objectives seamlessly.
-
-Along with the flexible software design, we have implemented the ability to run feasibility and sensitivity checks before trying to optimize. This will allow the user to know additional information about the problem. First, from feasibility, the user will know quickly if the run is unable to find a feasible point to run optimization. Second, from sensitivity, the user can know which parameters will dramatically change the optimization versus which parameters are unnecessarily adding to the dimension of the optimization space. 
+The first step in our work flow is receiving spring design specifications from a user interested in building a spring for use in some industrial application.  The application will typically involve a set of attributes (eg. spring rate) to optimize and some design constraints (eg. the spring's height or diameter).  For example, consider the acceleration switch discussed during the introduction.  In this case, the user would like to achieve the smallest possible spring rate and spring index, while satisfying the physical dimensions of the acceleration switch.
 
 \subsection{Problem Definition}
 \label{sec:Problem_Definition}
 
+Once the user has provided their input, the next step is formulating the problem.  This requires specifying an optimization objective, design variables and constraints.  To reduce the size of the permissible problem space, the user must specify the optimization function as a weighted sum of minimums and maximums.  While there are other methods for multicriteria optimization, including these in our scheme has been left to future work.  Also, we have reduced the space of design variables based on discussions with engineers experienced with spring design.
+
+After formulating the problem, a library of predefined constraints and objectives is called to initialize the optimization software.  In some problems, however, the designer may need to constrain or optimize an attribute that is not part of the existing library.  If the user has a mathematical formulation for the desired attribute, it can be added to the constraint library for use in the problem formulation.
+
+Our team's integration of stress relaxation provides a useful example of this process.  In some design problems, relaxation is an important objective or constraint.  To our knowledge, however, there are no spring design processes which accounting for the effects of relaxation.  Thus, our team undertook a study of stress relaxation to find a mathematical formulation (see Appendix-xx for technical details) which was added to the function library and can now be used in any problem formulation.
+
+To allow the user maximum flexibility in their problem formulation, our software uses an object oriented design.  Object-oriented programming is an approach to software design that centers around classes which are data containers capable of performing a predefined set of tasks.  For example, our program has a \textbf{Constraint} class that includes the constraint's function, and a way to check whether the constraint is violated at a given point.
+
+Using classes allow flexibility because the program's algorithm are designed to operate on the classes.  For example, the \textbf{OptimizationProblem} class generates the input for the optimizer and sensitivity analysis.  When the user inputs a new problem, the program generates an \textbf{OptimizationProblem} with a specific optimization function and set of constraints.  Thus, once the user has a problem formulation, our software can convert their problem into the objects needed for the optimizer to run.
 
 % Check capitalization
 \subsection{Feasibility}
 \label{subsec:Feasibility}
 
-Once the user has set a problem, the next step is determining the nature of the feasible region.  To assess feasibility, we use a Latin Hypercube sampling method.  In Latin Hypercube sampling, the samples are designed to cover the entire domain.  This approach is used because the user defined constraints can be of a general nature (for example, linear or non-linear).  If a feasible point cannot be identified, the algorithm will terminate and the user is informed a feasible point cannot be found.  At this point, the user can try a more exhaustive search or reformulate the problem.
+Once the user has set a problem, the next step is determining the nature of the feasible region.  To assess feasibility, we use a Latin hypercube sampling method, which is designed to ensure sampling coverage over the entire domain.  This approach is used because the user defined constraints are very general in nature (for example, they can be linear or non-linear).  If a feasible point cannot be identified, the algorithm terminates and informs the user that a feasible point cannot be found.  At this point, the user can try a more exhaustive search or reformulate the problem.
 
-Additionally, a graphical tool has been added to help the user analyze the problem's feasible region.  As illustrated in figure-xx, a plot with two or three state variables can be displayed that highlights the problem's overall feasible region and the contributions from each individual constraint.  This will allow the user to see which constraints are most restrictive in the context of their problem.
-
-
-The feasibility of a solution depends on if a solution satisfies all the constraints in the problem, as well as, constraints that are not included. We also need a feasible solution to start the optimization process, otherwise we may never find an solution that is feasible and optimal. Implementing this requirement is simply sampling the available space and checking each sample against all constraints. 
-
-Refer to section \ref{sec:Experiments} to see plots that are showing feasibility given two or three state variables.
+Additionally, a graphical tool has been added to help the user analyze the problem's feasible region and the value of the objective function over the region.  As illustrated in the case studies, a plot with two or three state variables can be displayed highlighting the problem's overall feasible region and the contributions from each individual constraint.  This will allow the user to identify the nature of the constraints in their problem.
 
 \subsection{Sensitivity Analysis}
 \label{subsec:Sensitivity}
@@ -286,17 +258,15 @@ such that
 
 \cite{Derivative} \cite{DirectPaper} \cite{MATLAB:2014a} \cite{DirectUserGuide}
  
-\subsection{Post Processing}
-\label{subsec:Post_Processing}
+%\subsection{Post Processing}
+%\label{subsec:Post_Processing}
 
 \section{Computational Experiments}
 \label{sec:Computational_Experiments}
 
-% Include case 1 before submitting draft
-
 \subsection{Case 1:}
 \label{subsec:Case1}
-%Case_56_28910
+%Case_56_38910
 
 \begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries State Variables:}, labelindent = 1cm]
  	\item [Objectives:] Minimize spring rate and spring index.\\
@@ -385,7 +355,7 @@ $
 \newpage
 \subsection{Case 2:}
 \label{subsec:Case2}
-%Case_56_34891011
+%Case_56_3891011
 
 \begin{description}[leftmargin=!,labelwidth=\widthof{\bfseries State Variables:}, labelindent = 1cm]
 	\item[Objectives:] Minimize spring rate and spring index.\\
