--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -261,7 +261,9 @@ such that
 \centerline{$G(\textbf{x}) \leq 0$}
 \centerline{$lb_{\textbf{x}} \leq \textbf{x} \leq ub_{\textbf{x}}$}
 
-\noindent Several optimization algorithms (both local and global) are available to solve the above optimization problem. Two algorithms - BFGS (local) \cite{BFGS} and DIRECT (global) see, \cite{DirectUserGuide} and   \cite{DirectPaper},have been tried for design optimization and their key differences are discussed below. BFGS algorithm requires the gradient and Hessian of the objective function, and also an initial point for optimization whereas DIRECT does not require the objective function to be differentiable. Since DIRECT is a global algorithm, it does not require an initial point. A drawback of DIRECT algorithm is that it requires more computations compared to BFGS. The 'fmincon' function in MATLAB \cite{MATLAB:2014a}, which implements the BFGS algorithm, requires the linear and non-linear constraints to be provided separately. Separation of linear and non-linear constraints is hard to implements in an automated software framework because they are problem-dependent whereas DIRECT does not require such segregation between constraints. Therefore, DIRECT global algorithm is used for optimization.
+\noindent  Several optimization algorithms (both local and global) are available to solve the above optimization problem. DIRECT is one of the most popular global search optimization algortihm \cite{DirectUserGuide} and   \cite{DirectPaper} have been tried for this spring optimization problem.\\
+
+The main idea of DIRECT algorithm is that  the domain is normalized to be unit hypercube and the function is evaluated at the center point $c$ of this hypercube and at points $\{c + \delta, c, c - \delta\} $ ($\delta$ is the size of the hypercube) ; then the hypercube with the smallest function value one is chosen and further divided into smaller hypercubes until the global optimum is obtained. DIRECT is a sampling optimization algorithm. It requires no knowledge of the objective function such as gradient and hessian. Since it is a global algorithm, it does not require an initial point.  Moreover, it is easy to implement in an automated software framework since it does not require segregation of linear and non-linear constraints.
 
 \hspace{5 mm} It is also essential to account for the variability in the manufacturing process(tolerance) in the design of springs. The tolerance can also be referred to as error, uncertainty in the design variabes. The tolerance for each of the spring parameters is nominally assumed to be equal to 1\% of the value of the variable. Thus, each variable follows a uniform distribution with unknown mean and variance, dependent on the mean value. The optimization formulation after accounting for tolerances can now be written as 
 
